--- a/Part2_Spam_Classifier_LogisticRegression.ipynb
+++ b/Part2_Spam_Classifier_LogisticRegression.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "id": "bbf2fc9f",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "id": "f9c3351d",
    "metadata": {},
    "outputs": [],
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "id": "3681c271",
    "metadata": {},
    "outputs": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "id": "4efa6b0c",
    "metadata": {},
    "outputs": [],
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "id": "fa0c65f9",
    "metadata": {},
    "outputs": [
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "id": "5d049875",
    "metadata": {},
    "outputs": [
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "id": "6365f65e",
    "metadata": {},
    "outputs": [
@@ -274,14 +274,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ False negatives saved to: false_negatives.txt\n"
+      "✅ False negatives saved to: false_negatives_results.txt\n"
      ]
     }
    ],
    "source": [
     "# --- ANALYZE FALSE NEGATIVES (Missed Spam) ---\n",
     "false_negatives_idx = np.where((y_test.values == 1) & (y_pred == 0))[0]\n",
-    "filename = \"false_negatives.txt\"\n",
+    "filename = \"false_negatives_results.txt\"\n",
     "\n",
     "with open(filename, \"w\", encoding=\"utf-8\") as f:\n",
     "    f.write(f\"Total false negatives (missed spam): {len(false_negatives_idx)}\\n\\n\")\n",
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "bdddab60",
    "metadata": {},
    "outputs": [
@@ -360,7 +360,7 @@
     "\n",
     "    return pd.DataFrame(records)\n",
     "\n",
-    "df = parse_false_negatives(\"false_negatives.txt\")\n",
+    "df = parse_false_negatives(\"false_negatives_results.txt\")\n",
     "df[\"combined\"] = df[\"subject\"] + \" \" + df[\"text\"]\n",
     "\n",
     "\n",
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "id": "1779e60f",
    "metadata": {},
    "outputs": [
@@ -484,10 +484,6 @@
       "Prediction: Spam\n",
       "----------------------------------------\n",
       "Email 8\n",
-      "Subject: Grow Your Business with AI Tools\n",
-      "Prediction: Spam\n",
-      "----------------------------------------\n",
-      "Email 9\n",
       "Subject: Your input Matters: Where did you find us?\n",
       "Prediction: Spam\n",
       "----------------------------------------\n"
@@ -515,7 +511,6 @@
     "    {\"subject\": \"Doctor Approved Weight Loss Pill\", \"body\": \"Lose up to 20 pounds in 2 weeks. No exercise needed! Limited time offer.\"},\n",
     "\n",
     "    # 💼 Business / Marketing Spam\n",
-    "    {\"subject\": \"Grow Your Business with AI Tools\", \"body\": \"Automate your marketing and scale with our AI-powered suite. Try now!\"},\n",
     "    {\"subject\": \"Your input Matters: Where did you find us?\", \"body\": \"Dear customer, Thank you for choosing Toyota! Your trust means the world to us. To help us serve you better, we’d love to get your feedback. Please take a moment to complete a short survey by clicking the link here. Your input will help us enhance our services and improve your overall experience. We promise it will only take a brief of your time. Thank you for your time and continued support! Best regards,   Toyota Customer Relations Team\"},\n",
     "\n",
     "]\n",
