--- a/Part2_Spam_Classifier_LogisticRegression.ipynb
+++ b/Part2_Spam_Classifier_LogisticRegression.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 28,
    "id": "bbf2fc9f",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 29,
    "id": "f9c3351d",
    "metadata": {},
    "outputs": [],
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 30,
    "id": "3681c271",
    "metadata": {},
    "outputs": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 31,
    "id": "4efa6b0c",
    "metadata": {},
    "outputs": [],
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 32,
    "id": "fa0c65f9",
    "metadata": {},
    "outputs": [
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 33,
    "id": "5d049875",
    "metadata": {},
    "outputs": [
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 34,
    "id": "6365f65e",
    "metadata": {},
    "outputs": [
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "bdddab60",
    "metadata": {},
    "outputs": [
@@ -439,12 +439,12 @@
    "id": "2c374a6c",
    "metadata": {},
    "source": [
-    "### 10. Test Model with real world examples"
+    "### 10. Test Model with realistic sample emails"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "1779e60f",
    "metadata": {},
    "outputs": [
@@ -517,7 +517,7 @@
     "\n",
     "print(\"\\n📤 Testing batch of sample emails with logistic regression...\\n\")\n",
     "for i, email in enumerate(sample_emails, 1):\n",
-    "    combined_text = clean_text(email['subject'] * 2 + ' ' + email['body'])  # Apply subject boost here too\n",
+    "    combined_text = clean_text(email['subject'] * 2 + ' ' + email['body']) \n",
     "    prediction = nb_pipeline.predict([combined_text])[0]\n",
     "    print(f\"Email {i}\")\n",
     "    print(\"Subject:\", email['subject'])\n",
